完成 JdyListRequest